--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
       <artifactId>mybatis</artifactId>
       <version>3.5.0</version>
     </dependency>
+    <!--log4j日志包-->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
     <!--mybatis适配spring-->
     <dependency>
       <groupId>org.mybatis</groupId>
@@ -83,6 +89,12 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
       <version>5.1.5.RELEASE</version>
+    </dependency>
+    <!--servlet包，包含HttpServletRequest、HttpServletResponse-->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
     </dependency>
   </dependencies>
 
