--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,9 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  <listener>
+    <listener-class>com.djn.listener.ContextFinalizer</listener-class>
+  </listener>
   <!-- 编码过滤 UTF-8 -->
   <filter>
     <filter-name>encodingFilter</filter-name>
