--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,6 @@
       <version>1.2</version>
     </dependency>
     <!--mybatis相关依赖-->
-    <!--c3p0连接池-->
-    <dependency>
-      <groupId>com.mchange</groupId>
-      <artifactId>c3p0</artifactId>
-      <version>0.9.5.2</version>
-    </dependency>
     <!--mysql驱动-->
     <dependency>
       <groupId>mysql</groupId>
@@ -102,7 +96,7 @@
       <artifactId>spring-webmvc</artifactId>
       <version>5.1.5.RELEASE</version>
     </dependency>
-    <!--servlet包，包含HttpServletRequest、HttpServletResponse-->
+    <!--servlet容器包，包含HttpServletRequest、HttpServletResponse-->
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
